--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,7 @@ name: Deploy AudioTextify to AWS EC2
 on:
   push:
     branches:
-      - dev # Deploy when changes are pushed to the main branch
+      - main # Deploy when changes are pushed to the main branch
 
 jobs:
   deploy:
